--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,15 @@
 {
     "java.project.referencedLibraries": [
         "lib/**/*.jar",
-        "C:/Users/Adrien/Documents/dev/lib/javafx-sdk-22.0.1/lib/*.jar"
+        "C:/Users/Adrien/Documents/dev/lib/javafx-sdk-22.0.1/lib/*.jar",
+        "/home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib/javafx-swt.jar",
+        "/home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib/javafx.web.jar",
+        "/home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib/javafx.swing.jar",
+        "/home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib/javafx.media.jar",
+        "/home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib/javafx.graphics.jar",
+        "/home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib/javafx.fxml.jar",
+        "/home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib/javafx.controls.jar",
+        "/home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib/javafx.base.jar",
+        "/home/strange/Téléchargements/charm-glisten-4.4.1.jar"
     ]
 }
