--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,15 @@
     "configurations": [
         {
             "type": "java",
+            "name": "Accueildemo",
+            "request": "launch",
+            "mainClass": "src.ihm.Accueildemo",
+            "projectName": "B6_4619270f",
+            "vmArgs": "--add-exports javafx.base/com.sun.javafx.event=ALL-UNNAMED --module-path /home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib --add-modules=javafx.controls,javafx.fxml "
+
+        },
+        {
+            "type": "java",
             "name": "IhmInterfaceImpl",
             "request": "launch",
             "mainClass": "src.IhmInterfaceImpl",
@@ -14,7 +23,7 @@
             "request": "launch",
             "mainClass": "src.ihm.Accueildemo",
             "projectName": "B6_5e75d992",
-            "vmArgs": "--module-path C:/Users/Adrien/Documents/dev/lib/javafx-sdk-22.0.1/lib --add-modules=javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path /home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib --add-modules=javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
@@ -22,14 +31,14 @@
             "request": "launch",
             "mainClass": "src.ihm.FXMLdemo",
             "projectName": "B6_4619270f",
-            "vmArgs": "--module-path C:/Users/Adrien/Documents/dev/lib/javafx-sdk-22.0.1/lib --add-modules=javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path /home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib --add-modules=javafx.controls,javafx.fxml"
         },
         {
             "type": "java",
             "name": "Run SimpleScene",
             "request": "launch",
             "mainClass": "SimpleScene",
-            "vmArgs": "--module-path C:/Users/Adrien/Documents/dev/lib/javafx-sdk-22.0.1/lib --add-modules=javafx.controls,javafx.fxml"
+            "vmArgs": "--module-path /home/strange/Téléchargements/openjfx-22.0.1_linux-x64_bin-sdk/javafx-sdk-22.0.1/lib --add-modules=javafx.controls,javafx.fxml"
         }
     ]
 }
